# zephyr

./: west.yml
boards/microchip/pic32cxbz2_curiosity/: Kconfig.defconfig  Kconfig.pic32cxbz2_curiosity  board.yml  pic32cxbz2_curiosity-pinctrl.dtsi  pic32cxbz2_curiosity.dts  pic32cxbz2_curiosity.yaml  pic32cxbz2_curiosity_defconfig
drivers/adc/: CMakeLists.txt  Kconfig  adc_pic32cxsg.c
drivers/can/: can_pic32cxsg.c
drivers/counter/: CMakeLists.txt  Kconfig  counter_pic32cxsg_tc32.c
drivers/dac/: CMakeLists.txt  Kconfig  dac_pic32cxsg.c
drivers/dma/: CMakeLists.txt  Kconfig  dma_pic32cxsg.c
drivers/ethernet/: CMakeLists.txt  Kconfig  eth_pic32cxsg_gmac.c  eth_pic32cxsg_gmac_priv.h
drivers/flash/: CMakeLists.txt  Kconfig  flash_pic32cxsg.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_pic32cxsg.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_pic32cxsg.c
drivers/i2c/: CMakeLists.txt  Kconfig  i2c_pic32cxsg.c
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  intc_pic32cxsg_eic.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_pic32cxsg.c
drivers/pwm/: pwm_pic32cxsg_tcc.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.pic32cxbz2  uart_pic32cxbz2.c  uart_pic32cxsg.c
drivers/spi/: CMakeLists.txt  Kconfig  spi_pic32cxsg.c
drivers/timer/: CMakeLists.txt  Kconfig  pic32cxsg_rtc_timer.c
drivers/watchdog/: CMakeLists.txt  Kconfig  wdt_pic32cxsg.c
modules/: Kconfig.microchip
samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/src/: main.c  rf_system.h
scripts/utils/: pic32cxbz2_hexmod.py
(+134 files in other folders)
